--- a/styles.css
+++ b/styles.css
@@ -1,52 +1,221 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap');
+/* CSS Reset */
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 :root{
-/* primary */
+    font-size: 62.5%;
 
---Soft-blue: hsl(215, 51%, 70%);
---Cyan: hsl(178, 100%, 50%);
-
-/* neutral */
+    /* neutral */
 --Very-dark-blue-main: hsl(217, 54%, 11%);
 --Very-dark-blue-card: hsl(216, 50%, 16%);
 --Very-dark-blue-line: hsl(215, 32%, 27%);
 --White: hsl(0, 0%, 100%);
 
-font-family: 'Outfit',sans-serif;
-font-size: 18px;
+/* primary */
+
+--Softblue: hsl(215, 51%, 70%);
+--Cyan: hsl(178, 100%, 50%);
+
+
 }
 
-.html,body{
-    height: 100vh;
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+div,
+span,
+dl,
+dd {
+  margin: 0;
+  font-size: 1.8rem;
+  font-family: 'Outfit',sans-serif;
+  
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role='list'],
+ol[role='list'] {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+ 
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+   scroll-behavior: auto;
+  }
+  
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+body{
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: var(--Very-dark-blue-main);
+
 }
-.card{
+main{
+    width: 35rem;
     background-color: var(--Very-dark-blue-card);
-    width: 350px;
-    border-radius: 15px;
-    /* padding: 10px; */
-    /* padding: 10px; */
+    
 }
-.eqm{
-    width: 350px;
-    border: 1px solid red;
-    /* padding: 10px; */
-    /* position: relative; */
+.nft_card{
+    display: flex;
+    flex-direction: column;
+    padding: 2rem; 
+    gap: 1.6rem;
 }
-.img_container{
-    border: 1px solid orange;
+.img-container{
+    position: relative;
+    cursor: pointer;
+   
 }
-.container{
-display: flex;
-gap: 10px;
-padding: 20px;
-flex-direction: column;
+img.eqm{
+    border-radius: 1.3rem;
+    position: relative;
+}
+.overlay{
+position: absolute;
+   top: 0;
+   bottom: 0;
+   left: 0;
+   opacity: 40%;
+   right: 0;
+   background-color: var(--Cyan);
+   display: none;
+   border-radius: 1.3rem;
+
+}
+.eye{
+    width: 30px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    display: none;
+   
+
+}
+.img-container:hover .eye,
+.img-container:hover .overlay{
+    display: block;
+    
+}
+h2{
+    font-weight: 600;
+    font-size: 2rem;
+    color: var(--White);
+    cursor: pointer;
+    transition: all 0.3s;
+}
+h2:hover{
+color: var(--Cyan);
+}
+p.info{
+    color: var(--Softblue);
+    font-weight: 300;
+}
+.pricing{
+    margin-top: 1rem;
+    display: flex;
+    justify-content: space-between;
+}
+.pricing div{
+    display: flex;
+    align-items: center;
+    gap: 0.7rem;
+    
+}
+.cost{
+    color: var(--Cyan);
+    font-weight: 400;
+    font-size: 1.6rem;
+}
+.time{
+    color: var(--Softblue);
+    font-weight: 400;
+    font-size: 1.6rem;
+}
+.line{
+    width: 100%;
+    height: 2px;
+    background-color: var(--Very-dark-blue-line);
+}
+.creator{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    /* font-size: 1rem; */
+}
+.creator img{
+    width: 4rem;
+    border-radius: 50%;
+    border: 1px solid white;
+}
+.created_by{
+    color: var(--Softblue);
+    font-weight: 300;
+    font-size: 1.6rem;
+}
+.creator_name{
+    color: var(--White);
+    font-weight: 400;
+    font-size: 1.6rem;
+
+    cursor: pointer;
+    transition: all 0.3s;
+}
+.creator_name:hover{
+    color: var(--Cyan);
 }
